# xrtdeps-vcpkg

./: .gitignore  CMakeLists.txt  CopyOpenCL.cmake  LICENSE  README.md  build.bat  vcpkg.json
.github/workflows/: build-deps.yml
